# string-matching

./: .gitignore  CMakeLists.txt  README.md  main.cpp
alg/: DamerauLevenshtein.cpp  DamerauLevenshtein.h  Difference.cpp  DuplicateFilter.cpp  DuplicateFilter.h  HungarianMatching.cpp  HungarianMatching.h  Levenshtein.cpp  Levenshtein.h  MinimumLinearAssignment.cpp  Operation.cpp  Point.h  SearchQueryDifference.cpp  SearchQueryDifference.h
old/: Cell.cpp  Cell.h  Difference.h  MinimumLinearAssignment.cpp  MinimumLinearAssignment.h  Move.cpp  Move.h  Operation.h  Point.cpp  WordDiff.cpp  WordDiff.h  WordDiffLite.cpp  WordDiffLite.h
util/: FileUtil.cpp  FileUtil.h  LoadingBar.cpp  LoadingBar.h  Random.h  Random.tpp  StringUtil.cpp  StringUtil.h  TestSuite.h  TestSuite.tpp
